เมื่อราคาหยุดหรือไม่มีการเปลี่ยนแปลงมันแสดราคาซ้อนมากับตัวเลขที่นำมาบวก

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ausiris",
-  "name": "Create React App Sample",
+  "short_name": "Shou Dee Heng",
+  "name": "Gold Spot",
   "icons": [
     {
       "src": "favicon.ico",
