--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
     "react-scripts": "3.0.1",
+    "rebass": "^3.1.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
