--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
+    "react-moment": "^0.9.2",
+    "react-number-format": "^4.0.8",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-tippy": "^1.2.3",
     "rebass": "^3.1.1",
     "styled-components": "^4.3.2"
   },
