--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-intl": "^2.9.0",
     "react-moment": "^0.9.2",
     "react-number-format": "^4.0.8",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-tippy": "^1.2.3",
     "rebass": "^3.1.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.3.2"
   },
   "scripts": {
